--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -24,7 +23,7 @@
   <!-- Formulaire -->
   <main class="Form">
     <h2><em><b>Formulaire de contact</b></em></h2>
-    <form action="/submit-form" method="POST">
+    <form action="https://formspree.io/f/xrbnylwa" method="POST">
       <fieldset>
         <legend><b><i>Identité</i></b></legend>
 
@@ -48,13 +47,6 @@
           <input type="email" name="email" required minlength="7" placeholder="ex: abc@123.xxx" title="Entrez une adresse e-mail valide (ex: abc@123.xxx)" />
         </label>
 
-        <label class="block">
-          <span><i><b>Numéro de téléphone</b></i> <small>(facultatif)</small></span>
-          <input type="tel" name="tel"
-            pattern="^\+33\s[1-9](\s?\d{2}){4}$"
-            placeholder="ex: +33 X XX XX XX XX"
-            title="Format: +33 X XX XX XX XX (espaces acceptés)" />
-        </label>
       </fieldset>
 
       <label class="block" for="message">
